--- a/index.html
+++ b/index.html
@@ -14,12 +14,42 @@
 </head>
 
 <body>
-	<!-- <svg width="234.000000" height="46.000000"  -->
-	<svg>
-		<use href="assets/sprites.svg#logo-icon">
 
-		</use>
-	</svg>
+	<header class="header">
+		<div class="container">
+			<div class="header__wrapper">
+				<svg class="logo">
+					<use href="assets/sprites.svg#logo-icon"></use>
+				</svg>
+
+				<nav class="header__nav">
+					<ul class="header__nav-list">
+						<li class="header__nav-item">
+							<a href="#" class="header__nav-link">Home</a>
+						</li>
+						<li class="header__nav-item">
+							<a href="#" class="header__nav-link">Services</a>
+						</li>
+						<li class="header__nav-item">
+							<a href="#" class="header__nav-link">Pages</a>
+						</li>
+						<li class="header__nav-item">
+							<a href="#" class="header__nav-link">About Use</a>
+						</li>
+						<li class="header__nav-item">
+							<a href="#" class="header__nav-link">Contact Us</a>
+						</li>
+					</ul>
+				</nav>
+
+				<div class="header_actions">
+					<button type="button" class="btn btn--login">Login</button>
+					<button type="button" class="btn">Sign Up</button>
+				</div>
+			</div>
+		</div>
+	</header>
+
 </body>
 
 </html>
