--- a/index.html
+++ b/index.html
@@ -50,6 +50,80 @@
 		</div>
 	</header>
 
+	<main>
+		<section class="hero">
+			<div class="container">
+				<div class="hero__content">
+					<h1 class="hero__title">Plugging great ideas into your brand</h1>
+					<p class="hero__desc">Completely synergize resource taxing relationships via premier niche markets.
+						Professionally cultivate one-to-one customer</p>
+					<div class="hero_actions">
+						<button type="button" class="btn ">Get a quote</button>
+						<button type="button" class="btn btn--learn">Learn More</button>
+					</div>
+				</div>
+
+			</div>
+		</section>
+
+		<section class="clients">
+			<div class="container">
+				<div class="clients__content">
+					<img src="assets/webp/google.webp" alt="google" class="clients__img">
+					<img src="assets/webp/microsoft.webp" alt="google" class="clients__img">
+					<img src="assets/webp/paypal.webp" alt="google" class="clients__img">
+					<img src="assets/webp/drible.webp" alt="google" class="clients__img">
+				</div>
+			</div>
+		</section>
+
+		<section class="service">
+			<div class="container">
+				<h3 class="service__suptitle">PREMIUM SERVICE</h3>
+				<h2 class="service__title">That is the best service Determine the service you need</h2>
+				<div class="service__wrapper">
+					<div class="service__item">
+						<img src="assets/webp/Group1.webp" alt="service-icon1" class="service__item-icon">
+						<h4 class="service__item-title">Web development</h4>
+						<p class="service__item-desc">Our Business Plan is a written document describing a company’s core business
+							activities.</p>
+					</div>
+					<div class="service__item">
+						<img src="assets/webp/Group2.webp" alt="service-icon2" class="service__item-icon">
+						<h4 class="service__item-title">UI/UX Designer</h4>
+						<p class="service__item-desc">Our Business Plan is a written document describing a company’s core business
+							activities.</p>
+					</div>
+					<div class="service__item">
+						<img src="assets/webp/Group3.webp" alt="service-icon3" class="service__item-icon">
+						<h4 class="service__item-title">App development</h4>
+						<p class="service__item-desc">Our Business Plan is a written document describing a company’s core business
+							activities.</p>
+					</div>
+					<div class="service__item">
+						<img src="assets/webp/Group4.webp" alt="service-icon4" class="service__item-icon">
+						<h4 class="service__item-title">Search Engine Optimization</h4>
+						<p class="service__item-desc">Our Business Plan is a written document describing a company’s core business
+							activities.</p>
+					</div>
+					<div class="service__item">
+						<img src="assets/webp/Group5.webp" alt="service-icon5" class="service__item-icon">
+						<h4 class="service__item-title">Graphic Design</h4>
+						<p class="service__item-desc">Our Business Plan is a written document describing a company’s core business
+							activities.</p>
+					</div>
+					<div class="service__item">
+						<img src="assets/webp/Group6.webp" alt="service-icon6" class="service__item-icon">
+						<h4 class="service__item-title">Social Media Management</h4>
+						<p class="service__item-desc">Our Business Plan is a written document describing a company’s core business
+							activities.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+	</main>
+
 </body>
 
 </html>
