--- a/index.html
+++ b/index.html
@@ -122,6 +122,47 @@
 			</div>
 		</section>
 
+		<section class="about">
+			<div class="container">
+				<div class="about__wrapper">
+					<div class="about__preview">
+						<img src="assets/webp/People_group1.webp" alt="about us" class="about__preview-img">
+
+						<svg class="about__play-icon">
+							<use href="assets/sprites.svg#play-icon"></use>
+						</svg>
+					</div>
+
+					<div class="about__content">
+						<div class="about__suptitle">ABOUT US</div>
+						<h2 class="about__title">Why Choose Us?</h2>
+						<p class="about__desc">Our team is here to give you personalized support within the hour available 24/7. In
+							accordance with our commitment to providing superior and professional service. Join daily live webinars,
+							watch our tutorials, or browse through our knowledge
+							base</p>
+						<button class="btn">Read More</button>
+					</div>
+
+					<div class="about-card">
+						<div class="about-card__inner">
+							<h4 class="about-card__title">200+</h4>
+							<p class="about-card__text">Team member</p>
+						</div>
+						<div class="about-card__inner">
+							<h4 class="about-card__title">900+</h4>
+							<p class="about-card__text">Client review</p>
+						</div>
+						<div class="about-card__inner">
+							<h4 class="about-card__title">20+</h4>
+							<p class="about-card__text">Complete project</p>
+						</div>
+					</div>
+				</div>
+
+
+			</div>
+		</section>
+
 	</main>
 
 </body>
