--- a/index.html
+++ b/index.html
@@ -158,8 +158,100 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<section class="team">
+			<div class="container">
+				<h3 class="team__suptitle">CREATIVE TEAM</h3>
+				<h4 class="team__title">Experience & our <span>Professionals Team</span></h4>
+				<div class="team__wrapper">
+					<div class="team__item">
+						<img src="assets/webp/Team1.webp" alt="team 1" class="team__photo">
+						<h4 class="team__name">Mahedi Hassan</h4>
+						<p class="team__prof">Website Developer & CEO StarSoftai</p>
+						<div class="team__text">
+							<p>Right Now, I'm working at Upwork and Fiverr as Web Design & Developer.</p>
+						</div>
+						<div class="social">
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/F.png" alt="facebook" class="social__icon">
+							</a>
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/I.png" alt="facebook" class="social__icon">
+							</a>
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/T.png" alt="facebook" class="social__icon">
+							</a>
+						</div>
+					</div>
+					<div class="team__item">
+						<img src="assets/webp/Team2.webp" alt="team 1" class="team__photo">
+						<h4 class="team__name">Md Rafi</h4>
+						<p class="team__prof">Apps Developer</p>
+						<div class="team__text">
+							<p>I'm Rafi, Coding passion drives my tech journey.</p>
+						</div>
+						<div class="social">
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/F.png" alt="facebook" class="social__icon">
+							</a>
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/I.png" alt="facebook" class="social__icon">
+							</a>
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/T.png" alt="facebook" class="social__icon">
+							</a>
+						</div>
+					</div>
+					<div class="team__item">
+						<img src="assets/webp/Team3.webp" alt="team 1" class="team__photo">
+						<h4 class="team__name">Nayem Hossain</h4>
+						<p class="team__prof">Website Developer</p>
+						<div class="team__text">
+							<p>Right Now, I'm working at Upwork and Fiverr as Web Design & Developer.</p>
+						</div>
+						<div class="social">
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/F.png" alt="facebook" class="social__icon">
+							</a>
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/I.png" alt="facebook" class="social__icon">
+							</a>
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/T.png" alt="facebook" class="social__icon">
+							</a>
+						</div>
+					</div>
+					<div class="team__item">
+						<img src="assets/webp/Team4.webp" alt="team 1" class="team__photo">
+						<h4 class="team__name">Rakibul Hasan</h4>
+						<p class="team__prof">UiUX Designer</p>
+						<div class="team__text">
+							<p>Right Now, I'm working at Upwork and Fiverr as Web Design & Developer.</p>
+						</div>
+						<div class="social">
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/F.png" alt="facebook" class="social__icon">
+							</a>
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/I.png" alt="facebook" class="social__icon">
+							</a>
+							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+								<img src="assets/icon/T.png" alt="facebook" class="social__icon">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
 
+		<section class="reviews">
+			<div class="container">
+				<h3 class="reviews__suptitle">CLIENT TESTOMONIAL</h3>
+				<h4 class="reviews__title">What our clients say?</h4>
+				<div class="slider"></div>
 			</div>
 		</section>
 
