--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
 							<p>Right Now, I'm working at Upwork and Fiverr as Web Design & Developer.</p>
 						</div>
 						<div class="social">
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/F.png" alt="facebook" class="social__icon">
 							</a>
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/I.png" alt="facebook" class="social__icon">
 							</a>
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/T.png" alt="facebook" class="social__icon">
 							</a>
 						</div>
@@ -193,13 +193,13 @@
 							<p>I'm Rafi, Coding passion drives my tech journey.</p>
 						</div>
 						<div class="social">
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/F.png" alt="facebook" class="social__icon">
 							</a>
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/I.png" alt="facebook" class="social__icon">
 							</a>
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/T.png" alt="facebook" class="social__icon">
 							</a>
 						</div>
@@ -212,13 +212,13 @@
 							<p>Right Now, I'm working at Upwork and Fiverr as Web Design & Developer.</p>
 						</div>
 						<div class="social">
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/F.png" alt="facebook" class="social__icon">
 							</a>
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/I.png" alt="facebook" class="social__icon">
 							</a>
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/T.png" alt="facebook" class="social__icon">
 							</a>
 						</div>
@@ -231,13 +231,13 @@
 							<p>Right Now, I'm working at Upwork and Fiverr as Web Design & Developer.</p>
 						</div>
 						<div class="social">
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/F.png" alt="facebook" class="social__icon">
 							</a>
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/I.png" alt="facebook" class="social__icon">
 							</a>
-							<a href="https://en.wikipedia.org/wiki/Facebook" class="social__item">
+							<a href="https://en.wikipedia.org/wiki/Facebook" target="_blank" class="social__item">
 								<img src="assets/icon/T.png" alt="facebook" class="social__icon">
 							</a>
 						</div>
@@ -250,13 +250,28 @@
 		<section class="reviews">
 			<div class="container">
 				<h3 class="reviews__suptitle">CLIENT TESTOMONIAL</h3>
-				<h4 class="reviews__title">What our clients say?</h4>
-				<div class="slider"></div>
+				<h4 class="reviews__title">What our <span>clients say?</span></h4>
+				<div class="slider">
+					<div class="slider__item">
+						<img src="assets/webp/Reviews1.webp" alt="" class="slider__img">
+					</div>
+					<div class="slider__item">
+						<img src="assets/webp/Reviews1.webp" alt="" class="slider__img">
+					</div>
+					<div class="slider__item">
+						<img src="assets/webp/Reviews1.webp" alt="" class="slider__img">
+					</div>
+					<div class="slider__item">
+						<img src="assets/webp/Reviews1.webp" alt="" class="slider__img">
+					</div>
+				</div>
 			</div>
 		</section>
 
 	</main>
-
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
