--- a/index.html
+++ b/index.html
@@ -269,6 +269,56 @@
 		</section>
 
 	</main>
+
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__wrapper">
+
+				<div class="footer__logo-inner">
+					<svg class="logo">
+						<use href="assets/sprites.svg#logo-icon"></use>
+					</svg>
+					<p class="footer__desc">
+						Lorem Ipsum is simply dummy text of the print ing iandtypesetting indust Lorem Ipsum has been the industry's
+						standard dummy text .
+					</p>
+				</div>
+				<nav class="footer__nav">
+					<h4 class="footer__nav-title">Quick Link</h4>
+					<ul class="footer__nav-list">
+						<li class="footer__nav-item">
+							<a href="#" class="footer__nav-link">Home</a>
+						</li>
+						<li class="footer__nav-item">
+							<a href="#" class="footer__nav-link">Services</a>
+						</li>
+						<li class="footer__nav-item">
+							<a href="#" class="footer__nav-link">Pages</a>
+						</li>
+						<li class="footer__nav-item">
+							<a href="#" class="footer__nav-link">About Use</a>
+						</li>
+						<li class="footer__nav-item">
+							<a href="#" class="footer__nav-link">Contact Us</a>
+						</li>
+					</ul>
+				</nav>
+
+				<div class="footer__adress">
+					<h4 class="footer__adress-title">Get In Touch</h4>
+					<p class="footer__adress-text"> <img class="footer__adress-con" src="assets/icon/flag.png" alt="">Old city
+						Street,Usa, 1212 New york-3500
+					</p>
+					<p class="footer__adress-text"> <img class="footer__adress-con" src="assets/icon/mail.png" alt=""><a
+							href="mailto:defaultinfoname@mail.com">defaultinfoname@mail.com</a></p>
+					<p class="footer__adress-text"> <img class="footer__adress-con" src="assets/icon/phone.png" alt=""><a
+							href="tel:+1234567891000">123 456
+							7891000</a></p>
+				</div>
+
+			</div>
+		</div>
+	</footer>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/script.js"></script>
